--- a/css/src/app.less
+++ b/css/src/app.less
@@ -13,8 +13,22 @@ body {
 	box-sizing: border-box;
 }
 
-h1, h1 + p {
-	text-align: center;
+p img {
+	float: right;
+}
+
+h2 {
+	clear: both;
+}
+
+@media (max-width: 550px) {
+	body > p:first-of-type, h1 {
+		text-align: center;
+	}
+
+	p img {
+		float: none;
+	}
 }
 
 form {
